# dns_switcher

./: .gitignore  Cargo.toml  README.md  dns_config.yaml
assets/: appicon.icns
src/: dns.rs  main.rs  types.rs  ui_components.rs  utils.rs
