[package]
name = "dns_switcher"
version = "0.1.1"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.3.1"
anyhow = "1.0.100"
regex = "1.12.2"
rust-embed = "8.8.0"
image = "0.25.8"
tray-icon = "0.21.2"
cocoa = "0.26.0"
objc = "0.2.7"
serde = {version = "1.0.228", features = ["derive"]}
serde_yaml = "0.9.34"

[package.metadata.bundle]
name = "DNS Switcher"
identifier = "com.kitosia.dns-switcher"
icon=["assets/appicon.icns"]
resources = ["dns_config.yaml"]
